# ml-k-mean-clustering

./: .gitignore  CLAUDE.md  PORTFOLIO.md  README.md  SPEC.md  lint.py  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
notebooks/: product_clustering.ipynb
reports/: final_report.md
src/: __init__.py  clustering.py  config.py  feature_engineering.py  parser.py  preprocessing.py  run_pipeline.py  schema.py  visualization.py
tests/: conftest.py  test_clustering.py  test_feature_engineering.py  test_parser.py  test_preprocessing.py  test_schema.py
