[project]
name = "retail-product-clustering"
version = "0.1.0"
description = "K-Means product segmentation on retail supermarket POS receipt data"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pandas-stubs>=3.0.3.260530",
]

# This is an application (a pipeline of scripts), not an installable library.
[tool.uv]
package = false

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, comprehensions, simplify.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Notebook-style import-after-backend-select in visualization is intentional.
"src/visualization.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # third-party stubs (sklearn, seaborn) are partial
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = true
files = ["src", "tests"]
